[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Assets_0009_bullet.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Assets_0010_heart.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Assets_0013_button-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Assets_0012_button-2---p.png" type="Texture" id=4]
[ext_resource path="res://src/UI.gd" type="Script" id=5]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="TextureRect" parent="Control/VBoxContainer"]
margin_right = 256.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/LifeBar"]
margin_left = 4.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 13.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect1" type="TextureRect" parent="Control/VBoxContainer/LifeBar/HBoxContainer"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 2 )

[node name="BulletBar" type="TextureRect" parent="Control/VBoxContainer"]
margin_top = 20.0
margin_right = 256.0
margin_bottom = 36.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/BulletBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -2.0
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect1" type="TextureRect" parent="Control/VBoxContainer/BulletBar/HBoxContainer"]
margin_right = 4.0
margin_bottom = 13.0
texture = ExtResource( 1 )
